force-app/main/default/objects/Position__c.object
<CustomObject>
    <description>jj</description>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c , &quot;Open&quot;) ,  NOW() -  Date_Opened__c ,  Date_Closed__c -  Date_Opened__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>mobe Valeur lookup non trouve dans le filtre</errorMessage>
            <filterItems>
                <field>User.Hiring_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>mobe lookup window text</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>London, United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_Systems__c</fullName>
        <label>Operating Systems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Operating_Systems</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>C-100</fullName>
                </value>
                <value>
                    <fullName>C-200</fullName>
                </value>
                <value>
                    <fullName>C-300</fullName>
                </value>
                <value>
                    <fullName>C-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>ACT-100</fullName>
                </value>
                <value>
                    <fullName>ACT-200</fullName>
                </value>
                <value>
                    <fullName>ACT-300</fullName>
                </value>
                <value>
                    <fullName>ACT-400</fullName>
                </value>
                <value>
                    <fullName>ENG-100</fullName>
                </value>
                <value>
                    <fullName>ENG-200</fullName>
                </value>
                <value>
                    <fullName>ENG-300</fullName>
                </value>
                <value>
                    <fullName>ENG-400</fullName>
                </value>
                <value>
                    <fullName>S-100</fullName>
                </value>
                <value>
                    <fullName>S-200</fullName>
                </value>
                <value>
                    <fullName>S-300</fullName>
                </value>
                <value>
                    <fullName>S-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COBOL</fullName>
                </value>
                <value>
                    <fullName>FORTRAN</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Perl</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedPosition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Related Positions</relationshipLabel>
        <relationshipName>RelatedPositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestFormula__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Index__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Test Index</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recruiter_Queue_Position</fullName>
        <filterScope>Queue</filterScope>
        <label>Recruiter Queue</label>
        <queue>Recruiter_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Approved_Position</fullName>
        <active>true</active>
        <description>This record type will be used for positions, once they have been approved</description>
        <label>Approved Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical_Position</fullName>
        <active>true</active>
        <label>Non-Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Position</fullName>
        <active>true</active>
        <description>Desc This record type should be used for Technical Positions only.</description>
        <label>Technical Position</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Approved_Position__c</fullName>
        <label>Approved Position</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
    </sharingReasons>
    <validationRules>
        <fullName>Every_Position_Must_Have_a_Hiring_Mgr</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Hiring_Manager__c ) = 0</errorConditionFormula>
        <errorDisplayField>Hiring_Manager__c</errorDisplayField>
        <errorMessage>Every Position Must Have a Hiring Mgr</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Temp_Position_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &quot;Temp&quot;)  &amp;&amp; ( BLANKVALUE(Duration__c,0) &lt;= 0 || Duration__c &gt; 365 )</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Temporary positions require a value for Duration between 1 and 365 days.</errorMessage>
    </validationRules>
</CustomObject>