force-app/main/default/objects/Position__c/validationRules/Every_Position_Must_Have_a_Hiring_Mgr.validationRule-meta.xml
<ValidationRule>
    <fullName>Every_Position_Must_Have_a_Hiring_Mgr</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Hiring_Manager__c ) = 0</errorConditionFormula>
    <errorDisplayField>Hiring_Manager__c</errorDisplayField>
    <errorMessage>Every Position Must Have a Hiring Mgr</errorMessage>
</ValidationRule>